--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [67], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_places_popularity\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns, df_categories\u001b[38;5;241m.\u001b[39mcolumns, df_location\u001b[38;5;241m.\u001b[39mcolumns\n",
+      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_places_popularity\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns, df_categories\u001b[38;5;241m.\u001b[39mcolumns, df_location\u001b[38;5;241m.\u001b[39mcolumns\n",
       "\u001b[0;31mNameError\u001b[0m: name 'df_places_popularity' is not defined"
      ]
     }
@@ -1643,9 +1643,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sqlite3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fsq_database \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/felixle/Desktop/Bootcamp Lectures/week_2/mini-project-II/data/square_database\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m fsq_conn \u001b[38;5;241m=\u001b[39m fsq_database\u001b[38;5;241m.\u001b[39mcursor()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sqlite3' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fsq_database = sqlite3.connect('/Users/felixle/Desktop/Bootcamp Lectures/week_2/mini-project-II/data/square_database')\n",
     "fsq_conn = fsq_database.cursor()"
