--- a/notebooks/API_EDA_FOURSQUARE.ipynb
+++ b/notebooks/API_EDA_FOURSQUARE.ipynb
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "97ff0d53",
+   "id": "c4261489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "2720b141",
+   "id": "72833816",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "93db80c1",
+   "id": "966d6261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "762a5ff2",
+   "id": "c0785fb0",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "7737e0ae",
+   "id": "859a5009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "91037172",
+   "id": "41a26f08",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f918ab57",
+   "id": "821094ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "877b3c51",
+   "id": "d10d4e3a",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a8af381c",
+   "id": "b7d6b285",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d432e6cd",
+   "id": "4ab70c89",
    "metadata": {},
    "source": [
     "### Get the popularity"
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "3e3af4b5",
+   "id": "438fc144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d39f224b",
+   "id": "55f483fe",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "90de7905",
+   "id": "9c57abd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ee52ad60",
+   "id": "523e7440",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3268b748",
+   "id": "0e1204b5",
    "metadata": {},
    "outputs": [
     {
@@ -942,32 +942,330 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11f671f9",
+   "metadata": {},
+   "source": [
+    "# Database FOURSQUARE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "b7e01285",
+   "execution_count": 108,
+   "id": "78bdd97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_connection(db_file):\n",
+    "    \"\"\" create a database connection to the SQLite database\n",
+    "        specified by db_file\n",
+    "    :param db_file: database file\n",
+    "    :return: Connection object or None\n",
+    "    \"\"\"\n",
+    "    conn = None\n",
+    "    try:\n",
+    "        conn = sqlite3.connect(db_file)\n",
+    "        return conn\n",
+    "    except Error as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    return conn\n",
+    "\n",
+    "\n",
+    "def create_table(conn, create_table_sql, df, table):\n",
+    "    \"\"\" create a table from the create_table_sql statement\n",
+    "    :param conn: Connection object\n",
+    "    :param create_table_sql: a CREATE TABLE statement\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        c = conn.cursor()\n",
+    "        c.execute(create_table_sql)\n",
+    "        conn.commit()\n",
+    "        df.to_sql(table, conn, if_exists='replace', index=False)\n",
+    "    except Error as e:\n",
+    "        print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "001e47d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fsq_database = sqlite3.connect('square_database')\n",
+    "#fsq_conn = fsq_database.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "1160db8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    database = r\"square_database.db\"\n",
+    "\n",
+    "    sql_popularity_table =  '''CREATE TABLE IF NOT EXISTS popularity_rate\n",
+    "                                ([popularity_id] INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "                                [fsq_id] VARCHAR,\n",
+    "                                [name] TEXT,\n",
+    "                                [timezone] TEXT,\n",
+    "                                [popularity] DECIMAL\n",
+    "                                );'''\n",
+    "    sql_location_table = '''CREATE TABLE IF NOT EXISTS location\n",
+    "                                ([location_id] INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "                                [fsq_id] VARCHAR,\n",
+    "                                [address] VARCHAR,\n",
+    "                                [locality] TEXT,\n",
+    "                                [postcode] VARCHAR,\n",
+    "                                [region] TEXT,\n",
+    "                                [country] TEXT\n",
+    "                            );'''\n",
+    "    sql_cat_table = '''CREATE TABLE IF NOT EXISTS categories\n",
+    "                             ([categories_id] INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "                             [fsq_id] VARCHAR,\n",
+    "                             [id] VARCHAR,\n",
+    "                             [name] TEXT\n",
+    "                             );'''\n",
+    "\n",
+    "    # create a database connection\n",
+    "    conn = create_connection(database)\n",
+    "\n",
+    "    # create tables\n",
+    "    # tables 'popularity_rate', 'location', 'categories'\n",
+    "    if conn is not None:\n",
+    "        # create popularity table\n",
+    "        create_table(conn, sql_popularity_table,\n",
+    "                     df_places_popularity, 'popularity_rate')\n",
+    "\n",
+    "        # create location table\n",
+    "        create_table(conn, sql_location_table,\n",
+    "                     df_location, 'location')\n",
+    "        \n",
+    "        # create catr table\n",
+    "        create_table(conn, sql_cat_table, df_categories, 'categories')\n",
+    "    else:\n",
+    "        print(\"Error! cannot create the database connection.\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "7b3858d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlite3 import connect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "c1e21660",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [97], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fsq_database \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/Users/felixle/Desktop/Bootcamp Lectures/week_2/mini-project-II/data/square_database\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m fsq_conn \u001b[38;5;241m=\u001b[39m fsq_database\u001b[38;5;241m.\u001b[39mcursor()\n",
-      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pie Wood Fired Pizza</td>\n",
+       "      <td>0.988574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fox's Catering</td>\n",
+       "      <td>0.986881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mary Browns</td>\n",
+       "      <td>0.966991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Amaya Indian Room</td>\n",
+       "      <td>0.964170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Popeye's Louisiana Kitchen</td>\n",
+       "      <td>0.961490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The Italian Bakery</td>\n",
+       "      <td>0.960220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Pizza Pizza</td>\n",
+       "      <td>0.947383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cafe Beans</td>\n",
+       "      <td>0.945973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Diamond Sushi</td>\n",
+       "      <td>0.942446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Subway</td>\n",
+       "      <td>0.923402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Midway Diner</td>\n",
+       "      <td>0.922274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Continental Specialties</td>\n",
+       "      <td>0.897306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Tiffsbar</td>\n",
+       "      <td>0.885597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Pizza Nova</td>\n",
+       "      <td>0.880660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Topper's Pizza</td>\n",
+       "      <td>0.864015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Wok Inn</td>\n",
+       "      <td>0.849344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>The Regatta</td>\n",
+       "      <td>0.847510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>The Mexican House</td>\n",
+       "      <td>0.835661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Heinz Burger</td>\n",
+       "      <td>0.822119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Sticky Fingers Bar &amp; Grill</td>\n",
+       "      <td>0.818310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Mr.Sub</td>\n",
+       "      <td>0.798843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Mucho Burrito Fresh Mexican Grill</td>\n",
+       "      <td>0.738609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Diamond Buffet</td>\n",
+       "      <td>0.727606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Andy's Place</td>\n",
+       "      <td>0.690224</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 name  popularity\n",
+       "0                Pie Wood Fired Pizza    0.988574\n",
+       "1                      Fox's Catering    0.986881\n",
+       "2                         Mary Browns    0.966991\n",
+       "3                   Amaya Indian Room    0.964170\n",
+       "4          Popeye's Louisiana Kitchen    0.961490\n",
+       "5                  The Italian Bakery    0.960220\n",
+       "6                         Pizza Pizza    0.947383\n",
+       "7                          Cafe Beans    0.945973\n",
+       "8                       Diamond Sushi    0.942446\n",
+       "9                              Subway    0.923402\n",
+       "10                       Midway Diner    0.922274\n",
+       "11            Continental Specialties    0.897306\n",
+       "12                           Tiffsbar    0.885597\n",
+       "13                         Pizza Nova    0.880660\n",
+       "14                     Topper's Pizza    0.864015\n",
+       "15                            Wok Inn    0.849344\n",
+       "16                        The Regatta    0.847510\n",
+       "17                  The Mexican House    0.835661\n",
+       "18                       Heinz Burger    0.822119\n",
+       "19         Sticky Fingers Bar & Grill    0.818310\n",
+       "20                             Mr.Sub    0.798843\n",
+       "21  Mucho Burrito Fresh Mexican Grill    0.738609\n",
+       "22                     Diamond Buffet    0.727606\n",
+       "23                       Andy's Place    0.690224"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fsq_database = sqlite3.connect('/Users/felixle/Desktop/Bootcamp Lectures/week_2/mini-project-II/data/square_database')\n",
-    "fsq_conn = fsq_database.cursor()"
+    "conn = connect('square_database.db')\n",
+    "pd.read_sql(\"\"\"SELECT name, popularity\n",
+    "                FROM popularity_rate\n",
+    "                ORDER BY popularity DESC\n",
+    "                \"\"\", conn)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f633afad",
+   "id": "02f63b05",
    "metadata": {},
    "outputs": [],
    "source": []
