--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -537,9 +537,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'drop_na' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"drop all high empty columns, according to function high_empty_rate return\"\"\"\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdrop_na\u001b[49m(df_fsq_revln)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'drop_na' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"drop all high empty columns, according to function high_empty_rate return\"\"\"\n",
     "drop_na(df_fsq_revln)"
@@ -547,96 +559,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fsq_id</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>geocodes</th>\n",
-       "      <th>link</th>\n",
-       "      <th>location</th>\n",
-       "      <th>name</th>\n",
-       "      <th>timezone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4d2ef96479dd6ea83b848dd3</td>\n",
-       "      <td>[{'id': 11057, 'name': 'Caterer', 'icon': {'pr...</td>\n",
-       "      <td>226</td>\n",
-       "      <td>{'main': {'latitude': 44.3814, 'longitude': -7...</td>\n",
-       "      <td>/v3/places/4d2ef96479dd6ea83b848dd3</td>\n",
-       "      <td>{'address': '96 Victoria St', 'country': 'CA',...</td>\n",
-       "      <td>Fox's Catering</td>\n",
-       "      <td>America/Toronto</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4b6eee17f964a5209cd12ce3</td>\n",
-       "      <td>[{'id': 13049, 'name': 'Diner', 'icon': {'pref...</td>\n",
-       "      <td>523</td>\n",
-       "      <td>{'main': {'latitude': 44.379593, 'longitude': ...</td>\n",
-       "      <td>/v3/places/4b6eee17f964a5209cd12ce3</td>\n",
-       "      <td>{'address': '151 Bradford St', 'country': 'CA'...</td>\n",
-       "      <td>Midway Diner</td>\n",
-       "      <td>America/Toronto</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     fsq_id  \\\n",
-       "0  4d2ef96479dd6ea83b848dd3   \n",
-       "1  4b6eee17f964a5209cd12ce3   \n",
-       "\n",
-       "                                          categories  distance  \\\n",
-       "0  [{'id': 11057, 'name': 'Caterer', 'icon': {'pr...       226   \n",
-       "1  [{'id': 13049, 'name': 'Diner', 'icon': {'pref...       523   \n",
-       "\n",
-       "                                            geocodes  \\\n",
-       "0  {'main': {'latitude': 44.3814, 'longitude': -7...   \n",
-       "1  {'main': {'latitude': 44.379593, 'longitude': ...   \n",
-       "\n",
-       "                                  link  \\\n",
-       "0  /v3/places/4d2ef96479dd6ea83b848dd3   \n",
-       "1  /v3/places/4b6eee17f964a5209cd12ce3   \n",
-       "\n",
-       "                                            location            name  \\\n",
-       "0  {'address': '96 Victoria St', 'country': 'CA',...  Fox's Catering   \n",
-       "1  {'address': '151 Bradford St', 'country': 'CA'...    Midway Diner   \n",
-       "\n",
-       "          timezone  \n",
-       "0  America/Toronto  \n",
-       "1  America/Toronto  "
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_fsq_revln' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_fsq_revln\u001b[49m\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_fsq_revln' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1643,18 +1578,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sqlite3' is not defined",
+     "ename": "OperationalError",
+     "evalue": "unable to open database file",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fsq_database \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/felixle/Desktop/Bootcamp Lectures/week_2/mini-project-II/data/square_database\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m fsq_conn \u001b[38;5;241m=\u001b[39m fsq_database\u001b[38;5;241m.\u001b[39mcursor()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sqlite3' is not defined"
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fsq_database \u001b[38;5;241m=\u001b[39m \u001b[43msqlite3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/Users/felixle/Desktop/Bootcamp Lectures/week_2/mini-project-II/data/square_database\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m fsq_conn \u001b[38;5;241m=\u001b[39m fsq_database\u001b[38;5;241m.\u001b[39mcursor()\n",
+      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file"
      ]
     }
    ],
